--- a/Odonto XR.1.html
+++ b/Odonto XR.1.html
@@ -13,7 +13,7 @@
     <style type="text/css">
       body { -ms-touch-action: none; }
     </style>
-    <script type="text/javascript" src="Odonto XR.1/files/KeyShotXR.js"></script>
+    <script type="text/javascript" src="https://github.com/giuseppelegrottaglie/Odonto/blob/5df9e20d5c83d32912a37ad80d698d0d8a000420/Odonto%20XR.1/files/KeyShotXR.js"></script>
     <script type="text/javascript">
       var keyshotXR;
 
